--- a/s/proxy.yaml
+++ b/s/proxy.yaml
@@ -133,6 +133,7 @@ payload:
   - '+.etherscan.io'
   - '+.everdalegame.com'
   - '+.f8.com'
+  - '+.facebook.com'
   - '+.facebookmail.com'
   - '+.fastly.net'
   - '+.fb.com'
