--- a/s/Privacy.yaml
+++ b/s/Privacy.yaml
@@ -1,4 +1,7 @@
 payload:
+  - 'analytics-api.smzdm.com'
+  - 'analytics-api-01.smzdm.com'
+  - 'adashbc.ut.taobao.com'
   - 'iotsdk.midea.com'
   - 'smartrac.midea.com'
   - 'mp-prod.smartmidea.net'
