--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -90,11 +90,12 @@ jobs:
 
           # 5️⃣ 生成 latest 指针
           cp "$OUTPUT" ads-latest.txt
-
+          rm -f "$OUTPUT"
+          
       - name: Commit result
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git add ads-*.txt
+          git add ads-latest.txt
           git commit -m "Merge rules (${DATE})" || echo "No changes"
           git push
